--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@
 
 server {
     listen 80;
-    server_name your-domain.com www.your-domain.com;  # Replace with your domain
+    server_name api.charlicoder.cc;  # Replace with your domain
     
     # Redirect HTTP to HTTPS (uncomment when SSL is ready)
     # return 301 https://$server_name$request_uri;
@@ -16,9 +16,6 @@ server {
 
     # Client max body size
     client_max_body_size 75M;
-
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
     # Static files (served directly from Docker volume)
     location /static/ {
