--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@
 
 server {
     listen 80;
-    server_name api.charlicoder.cc;  # Replace with your domain
+    server_name api.charlicoder.com;  # Replace with your domain
     
     # Redirect HTTP to HTTPS (uncomment when SSL is ready)
     # return 301 https://$server_name$request_uri;
