update for staticfiles

--- a/docker_compose.prod.yml
+++ b/docker_compose.prod.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
       - redis
     volumes:
-      - static_volume:/app/staticfiles
+      - .staticfiles:/app/staticfiles
       - media_volume:/app/media
     networks:
       - app-network
