--- a/nginx.conf
+++ b/nginx.conf
@@ -1,85 +1,14 @@
-# /etc/nginx/sites-available/django-app
-# Host machine nginx configuration for Django app
-
 server {
     listen 80;
-    server_name api.charlicoder.com;  # Replace with your domain
-    
-    # Redirect HTTP to HTTPS (uncomment when SSL is ready)
-    # return 301 https://$server_name$request_uri;
+    server_name api.charlicoder.com 51.112.205.54;
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-    # Client max body size
-    client_max_body_size 75M;
-
-    # Static files (served directly from Docker volume)
+    location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        alias /var/lib/docker/volumes/affiproductapi_static_volume/_data/;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        access_log off;
+        root /home/ubuntu/affiproductapi;
     }
 
-    # Media files (served directly from Docker volume)
-    location /media/ {
-        alias /home/ubuntu/affiproductapi/staticfiles;
-        expires 1y;
-        add_header Cache-Control "public";
-        access_log off;
-    }
-
-    # Health check endpoint
-    location /health/ {
-        access_log off;
-        proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 5s;
-        proxy_read_timeout 5s;
-    }
-
-    # API endpoints with rate limiting
-    location /api/ {
-        limit_req zone=api burst=20 nodelay;
-        proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-    }
-
-    # Admin panel
-    location /admin/ {
-        proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-    }
-
-    # All other requests
     location / {
-        proxy_pass http://127.0.0.1:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        include proxy_params;
+        proxy_pass http://unix:/home/ubuntu/affiproductapi/affproductapi.sock;
     }
 }
