added auto deploy script

--- a/affiproductapi.service
+++ b/affiproductapi.service
@@ -1,13 +1,16 @@
 [Unit]
-Description=Uvicorn instance to serve AffiProductAPI
+Description=Gunicorn daemon to serve Django app
 After=network.target
 
 [Service]
 User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/affiproductapi
-ExecStart=/home/ubuntu/affiproductapi/.venv/bin/gunicorn --access-logfile - --workers 3 --bind unix:/home/ubuntu/affiproductapi/affproductapi.sock core.wsgi:application
+ExecStart=/home/ubuntu/affiproductapi/.venv/bin/gunicorn \
+          --access-logfile - \
+          --workers 3 \
+          --bind unix:/home/ubuntu/affiproductapi/affiproductapi.sock \
+          core.wsgi:application
 
 [Install]
 WantedBy=multi-user.target
-EOF
