--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,21 @@
 server {
     listen 80;
-    server_name api.charlicoder.com 51.112.205.54;
+    server_name api.charlicoder.com;
 
-    location = /favicon.ico { access_log off; log_not_found off; }
+    location /favicon.ico 
+    { 
+        access_log off; 
+        log_not_found off; 
+    }
+
     location /static/ {
-        root /home/ubuntu/affiproductapi;
+        alias /home/ubuntu/affiproductapi/staticfiles/;
     }
 
     location / {
         include proxy_params;
-        proxy_pass http://unix:/home/ubuntu/affiproductapi/affproductapi.sock;
+        proxy_pass http://unix:/home/ubuntu/affiproductapi/affiproductapi.sock;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
